launchpad alignments fixed

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -7918,7 +7918,7 @@ label {
 }
 
 .pagenotfound{
-    margin-top: 90px !important;
+    padding-top: 90px !important;
 }
 
 .about-text-content{
